--- a/login.html
+++ b/login.html
@@ -32,11 +32,11 @@
 
                     <form id="loginForm">
                         <div class="mb-3">
-                            <label class="form-label">Email</label>
+                            <label class="form-label text-white">Email</label>
                             <input type="email" class="form-control" id="email" required>
                         </div>
                         <div class="mb-4">
-                            <label class="form-label">Senha</label>
+                            <label class="form-label text-white">Senha</label>
                             <input type="password" class="form-control" id="password" required>
                         </div>
 
