--- a/signup.html
+++ b/signup.html
@@ -32,31 +32,31 @@
 
                     <form id="signupForm">
                         <div class="mb-3">
-                            <label class="form-label">Nome Completo</label>
+                            <label class="form-label text-white">Nome Completo</label>
                             <input type="text" class="form-control" id="name" placeholder="Ex: Dr. Roberto Silva"
                                 required>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Email Profissional</label>
+                            <label class="form-label text-white">Email Profissional</label>
                             <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com" required>
                         </div>
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <label class="form-label">Especialidade</label>
+                                <label class="form-label text-white">Especialidade</label>
                                 <input type="text" class="form-control" id="specialty" placeholder="Ex: TCC" required>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label class="form-label">Nº Profissional</label>
+                                <label class="form-label text-white">Nº Profissional</label>
                                 <input type="text" class="form-control" id="regNumber" placeholder="Ex: CRP 12345"
                                     required>
                             </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Senha</label>
+                            <label class="form-label text-white">Senha</label>
                             <input type="password" class="form-control" id="password" required>
                         </div>
                         <div class="mb-4">
-                            <label class="form-label">Confirmar Senha</label>
+                            <label class="form-label text-white">Confirmar Senha</label>
                             <input type="password" class="form-control" id="confirmPassword" required>
                         </div>
 
