--- a/chat.html
+++ b/chat.html
@@ -374,7 +374,7 @@
             <a href="#" class="sidebar-link">
                 <i class="fas fa-users"></i><span>Pacientes</span>
             </a>
-            <a href="#" class="sidebar-link">
+            <a href="relatorios.html" class="sidebar-link">
                 <i class="fas fa-chart-pie"></i><span>Relatórios</span>
             </a>
         </nav>
