--- a/login.html
+++ b/login.html
@@ -54,8 +54,10 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="auth.js"></script>
+    <script src="firebase-config.js"></script>
     <script>
-        document.getElementById('loginForm').addEventListener('submit', function (e) {
+        document.getElementById('loginForm').addEventListener('submit', async function (e) {
             e.preventDefault();
             const errorMsg = document.getElementById('errorMsg');
             errorMsg.classList.add('d-none');
@@ -63,14 +65,13 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            const therapists = window.Zimy.db.load('therapists');
-            const user = therapists.find(t => t.email === email && t.password === password);
+            // ZimyAuth.login is now async due to Firestore REST call
+            const result = await window.ZimyAuth.login(email, password);
 
-            if (user) {
-                window.Zimy.db.setSession(user);
+            if (result.success) {
                 window.location.href = 'dashboard.html';
             } else {
-                errorMsg.innerText = "Email ou senha incorretos.";
+                errorMsg.innerText = result.message;
                 errorMsg.classList.remove('d-none');
             }
         });
