feat: Add forgot password functionality with a dedicated page and Firebase integration.

--- a/login.html
+++ b/login.html
@@ -36,7 +36,11 @@
                             <input type="email" class="form-control" id="email" required>
                         </div>
                         <div class="mb-4">
-                            <label class="form-label text-white">Senha</label>
+                            <div class="d-flex justify-content-between align-items-center mb-1">
+                                <label class="form-label text-white mb-0">Senha</label>
+                                <a href="forgot-password.html" class="text-white-50 small text-decoration-none">Esqueceu
+                                    a senha?</a>
+                            </div>
                             <input type="password" class="form-control" id="password" required>
                         </div>
 
