feat: Implement a dedicated "Forgot Password" button in the login UI and include the forgot password page in authentication checks.

--- a/login.html
+++ b/login.html
@@ -36,17 +36,14 @@
                             <input type="email" class="form-control" id="email" required>
                         </div>
                         <div class="mb-4">
-                            <div class="d-flex justify-content-between align-items-center mb-1">
-                                <label class="form-label text-white mb-0">Senha</label>
-                                <a href="forgot-password.html" class="text-white-50 small text-decoration-none">Esqueceu
-                                    a senha?</a>
-                            </div>
+                            <label class="form-label text-white">Senha</label>
                             <input type="password" class="form-control" id="password" required>
                         </div>
 
                         <div id="errorMsg" class="text-danger small mb-3 d-none text-center"></div>
 
-                        <button type="submit" class="btn btn-zimy-primary w-100 mb-3">Entrar no Dashboard</button>
+                        <button type="submit" class="btn btn-zimy-primary w-100 mb-2">Entrar no Dashboard</button>
+                        <a href="forgot-password.html" class="btn btn-zimy-outline w-100 mb-3">Esqueci minha senha</a>
                     </form>
 
                     <p class="text-center small mb-0">
